--- a/index.html
+++ b/index.html
@@ -11,6 +11,5 @@ Hello to the ones reading this, my name is Brandon I'm 16 years old currently.
   Tufts or any other good engineering college since i dream about becoming a
   Chemical Engineer or a Mechanical engineer and I also have an interist in
   Plastics and Aerospace. I have high hopes for the future and what it brings me
-  and I am willing to put as much work as I can to achieve all I want. When it
-  comes to my achievements im greedy because I want it all.
+  and I am willing to put as much work as I can to achieve all I want.
 </p> <main class="container"> <!-- Your content here --> </main> <a href="./projects/credits/"> Credits and copyright </a> <!-- More projects to come soon! -->
